# liteshell

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  justfile  rust-toolchain.toml
.cargo/: config.toml
crates/liteshell/: Cargo.toml
crates/liteshell-builtins/: Cargo.toml
crates/liteshell-builtins/src/: color.rs  help.rs  lib.rs
crates/liteshell-core/: Cargo.toml
crates/liteshell-core/src/: app.rs  command.rs  completion.rs  config.rs  directory_db.rs  editor.rs  history.rs  lib.rs  output.rs  parser.rs  shell.rs
crates/liteshell-fff/: Cargo.toml
crates/liteshell-fff/src/: ffi.rs  lib.rs
crates/liteshell-launcher/: Cargo.toml
crates/liteshell-launcher/src/: main.rs
crates/liteshell-tui/: Cargo.toml
crates/liteshell-tui/src/: lib.rs  scrollback.rs  terminal_session.rs  ui.rs
crates/liteshell-windows/: Cargo.toml
crates/liteshell-windows/src/: lib.rs
crates/liteshell/src/: executor.rs  main.rs
crates/liteshell/tests/: non_interactive.rs
docs/: colorization-design.md  command-implementation-policy.md  configuration.md  implementation-plan.md  opentui-c-abi-mvp.md  prd-traceability.md  rust-ratatui-migration-plan.md  validation.md
scripts/: fetch-fff.ps1  fetch-opentui.ps1
src/: config.h  fff_finder.cpp  fff_finder.hpp  history.cpp  history.hpp  main.cpp  opentui_renderer.cpp  opentui_renderer.hpp  parser.cpp  parser.hpp  shell.cpp  shell.hpp  terminal.cpp  terminal.hpp
tests/: console_input_test.cpp  interactive.ps1  smoke.ps1
tests/fixtures/: com.txt  fff-index-probe.txt  hello.bat  hello.cmd  hello.ps1
xtask/: Cargo.toml
xtask/src/: main.rs
