[workspace]
members = [
  "crates/liteshell",
  "crates/liteshell-core",
  "crates/liteshell-builtins",
  "crates/liteshell-tui",
  "crates/liteshell-windows",
  "crates/liteshell-fff",
  "crates/liteshell-launcher",
  "xtask",
]
resolver = "2"
default-members = ["crates/liteshell"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
crossterm = "=0.28.1"
libloading = "=0.8.6"
os_pipe = "=1.2.1"
ratatui = { version = "=0.29.0", default-features = false, features = ["crossterm"] }
thiserror = "=2.0.11"
unicode-segmentation = "=1.12.0"
unicode-width = "=0.2.0"
windows-sys = { version = "=0.59.0", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_JobObjects", "Win32_System_Threading"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = "symbols"
